# Backend-for-browser-game

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: api_handler.cpp  api_handler.h  application.cpp  application.h  boost_json.cpp  collision_detector.cpp  collision_detector.h  database.cpp  database.h  extra_data.cpp  extra_data.h  geom.h  handlers_utils.cpp  handlers_utils.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  model_serialization.h  my_logger.cpp  my_logger.h  request_handler.cpp  request_handler.h  sdk.h  tagged.h  tagged_uuid.cpp  tagged_uuid.h
tests/: collision-detector-tests.cpp  state-serialization-tests.cpp
